--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <title>Faiz Sabli</title>
     <link rel="stylesheet" href="spectre.css">
     <link rel="stylesheet" href="personal.css">
-    <link rel="stylesheet" href="fotorama.css">
-    <script src="jquery.js"></script>
-    <script src="fotorama.js"></script>
+    <link  href="https://cdnjs.cloudflare.com/ajax/libs/fotorama/4.6.4/fotorama.css" rel="stylesheet">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/fotorama/4.6.4/fotorama.js"></script>
     <script type="text/javascript">
         $(window).on("load", function () {
             $("body").fadeIn(500);
