--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
 
 
                 <div class="mg-top pd-top bg-yellow text-black rounded-corners box-shade">
-                    <div class="p-card h3 text-torq">Why Choose Us?</div>
+                    <div class="p-card pd-top mg-bot h3 bg-shade text-torq text-bold box-shade">Why Choose Us?</div>
                     <div class="p-card h2">We have helped people save <strong class="text-blood-red">RM 60 million</strong>
                         of loan interest in 2020.</div>
                 </div>
