--- a/index.html
+++ b/index.html
@@ -585,7 +585,7 @@
                             <p class="text-small text-bold">Join me in this quest to put the power back into the hands of the people (YOU!)</p>
                         </div>
                         <div class="column col-12 pd-top-bottom">
-                            <p class="text-tiny text-bold">Copyright © 2021 faiz-sabli.github.io All rights reserved.</p>
+                            <p class="text-tiny text-bold">Copyright © 2021 faizsabli.github.io All rights reserved.</p>
                         </div>
                     </div>
                 </div>
