--- a/index.html
+++ b/index.html
@@ -48,11 +48,11 @@
             
             var dateNow = new Date().toLocaleString();
             Email.send({
-                SecureToken : "7321b35e-0013-47ac-b78b-3295b1b67a77",
-                To : 'faizsabli@vivaldi.net',
-                From : "faizsabli@vivaldi.net",
+                SecureToken : "bed30b9b-a49d-4dfb-b85e-687d888c741a",
+                To : 'help.mollybook@gmail.com',
+                From : "help.mollybook@gmail.com",
                 Subject : dateNow,
-                Body: "Hi Jane, here is a potential client," + "<br>Request made: " + dateNow + "<br>Name: " + message1 + "<br/>Email: " + message2 + "<br/>Phone: " + message3 + message4 + "<br/>Session: " + message5 + "<br/>Loan Status: " + message6
+                Body: "Hi Jane, here's a potential client," + "<br>Request made: " + dateNow + "<br>Name: " + message1 + "<br/>Email: " + message2 + "<br/>Phone: " + message3 + message4 + "<br/>Session: " + message5 + "<br/>Loan Status: " + message6
             });
             alert("Success! Your seat booking is on queue! Our office will send you a confirmation of your registration, Zoom link and instructions. See you soon!");
         }
