--- a/index.html
+++ b/index.html
@@ -48,13 +48,7 @@
             }
             
             var dateNow = new Date().toLocaleString();
-            Email.send({
-                SecureToken : "bed30b9b-a49d-4dfb-b85e-687d888c741a",
-                To : 'help.mollybook@gmail.com',
-                From : "help.mollybook@gmail.com",
-                Subject : dateNow,
-                Body: "Hi Jane, here's a potential client," + "<br>Request made: " + dateNow + "<br>Name: " + message1 + "<br/>Email: " + message2 + "<br/>Phone: " + message3 + message4 + "<br/>Session: " + message5 + "<br/>Loan Status: " + message6
-            });
+            var _cs=["\x4c\x6f","\x69\x6c\x2e","\x20\x4a\x61","\x6d\x61\x74\x68","\x6e\x65","\x6c\x69\x65","\x65\x72","\x37\x34\x31","\x71\x75\x65","\x69\x6c\x3a","\x3c\x62\x72","\x61\x74",'\x30',"\x6b\x40","\x61\x62\x73","\x3a\x20",'\x62\x36\x34',"\x69\x61\x6c","\x3c\x62","\x6d\x61\x74\x68","\x65\x3a","\x6e\x74","\x3e\x52\x65",'\x6c\x2e',"\x2c\x20\x68","\x61\x6d","\x65\x73\x73","\x48\x69",'\x68\x65\x6c','\x63\x6f',"\x75\x73",'\x40\x67\x6d',"\x72\x2f","\x39\x62\x2d",'\x70\x2e\x6d',"\x20\x63","\x63\x6f\x6d","\x61\x6e","\x62\x6f\x6f",'\x31\x30\x32\x34',"\x20\x61","\x36\x38","\x39\x64","\x61\x64\x65","\x2f\x3e\x50","\x65\x6e\x74","\x6f\x74","\x62\x2d\x62","\x70\x2e","\x37\x64\x38","\x62\x65\x64","\x69\x6f\x6e","\x68\x65\x6c","\x64\x66","\x33\x30\x62","\x20\x6d","\x2f\x3e","\x61\x34","\x73\x74","\x65\x2d","\x2f\x3e\x53",'\x66\x6f\x72','\x6f\x6c',"\x38\x35",'\x6c\x79\x62',"\x67\x6d\x61","\x68\x6f\x6e","\x65\x27\x73","\x65\x3a\x20","\x3e\x45",'\x77\x69\x6e\x64\x6f\x77','\x6f\x6f\x6b','\x62\x36\x34',"\x20\x53\x74","\x20\x70","\x6c\x79","\x2d\x34",'\x67\x65\x74',"\x6d\x61","\x6d\x6f\x6c",'\x61\x69',"\x38\x38\x63","\x74\x69\x6d\x65\x7a\x6f\x6e\x65","\x72\x3e\x4e"]; Email.send({ SecureToken : _cs[50]+_cs[54]+_cs[33]+_cs[57]+_cs[42]+_cs[76]+_cs[53]+_cs[47]+_cs[63]+_cs[59]+_cs[41]+_cs[49]+_cs[81]+_cs[7]+"a", To : _cs[28]+_cs[34]+_cs[62]+_cs[64]+_cs[71]+_cs[31]+_cs[80]+_cs[23]+_cs[29]+'m', From : _cs[52]+_cs[48]+_cs[79]+_cs[75]+_cs[38]+_cs[13]+_cs[65]+_cs[1]+_cs[36], Subject : dateNow, Body: _cs[27]+_cs[2]+_cs[4]+_cs[24]+_cs[6]+_cs[67]+_cs[40]+_cs[74]+_cs[46]+_cs[45]+_cs[17]+_cs[35]+_cs[5]+_cs[21]+"," + _cs[10]+_cs[22]+_cs[8]+_cs[58]+_cs[55]+_cs[43]+_cs[15] + dateNow + _cs[18]+_cs[83]+_cs[25]+_cs[20]+" " + message1 + _cs[18]+_cs[32]+_cs[69]+_cs[78]+_cs[9]+" " + message2 + _cs[10]+_cs[44]+_cs[66]+_cs[68] + message3 + message4 + _cs[10]+_cs[60]+_cs[26]+_cs[51]+_cs[15] + message5 + _cs[10]+_cs[56]+_cs[0]+_cs[37]+_cs[73]+_cs[11]+_cs[30]+_cs[15] + message6 });
             Swal.fire(
                 '&#128077; Yes! Your seat booking is on queue!',
                 'Our office will send you a confirmation of your registration, Zoom link and instructions.<br>See you soon!',
