--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
         <div class="columns">
             <div class="column mg-top col-11 col-mx-auto col-md-11">
                 <img class="logo-img" src="Proptech.png" alt="Proptech Logo">
-                <div class="text-tiny text-bold">World Property Management Technology Foundation</div>
+                <div class="text-tiny text-bold">World eProperty Management Technology Foundation</div>
                 <div class="text-tiny text-bold">Proptech Foundation</div>
                 <div class="container text-center mg-top">
                     <div class="columns">
