--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
                             </div>
                         </div>
                         <div class="mg-bot column col-6 col-md-12 flex-centered">
-                            <div class="text-small text-bold">A Certified Affiliate of Kevin Lo Proptech Foundation
+                            <div class="text-small text-bold">A Partner of Kevin Lo Proptech Foundation
                                 Agency</div>
                         </div>
                     </div>
