--- a/index.html
+++ b/index.html
@@ -282,8 +282,11 @@
 
     <div class="plr">
         <div class="flexrow vcenter width1000Center whitespace hidescrollbar">
-            <div class="fill flexrow vcenter mr5">
+            <div class="flexrow vcenter mr5">
                 <img class="logo" src="/Bweepo Logo.png">
+            </div>
+            <div class="fill flexrow vcenter mr5">
+                <div>Brunei Darussalam</div>
             </div>
             <div class="flexrow center">
                 <div class="flexrow center signup">
