--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
             <div class="flexrow vcenter mr5">
                 <img class="logo" src="/Bweepo Logo.png">
             </div>
-            <div class="fill flexrow vcenter mr5">
+            <div class="fill flexrow vcenter mr5 hidescrollbar">
                 <div>Brunei Darussalam</div>
             </div>
             <div class="flexrow center">
