--- a/index.html
+++ b/index.html
@@ -226,6 +226,10 @@
             border: none;
         }
         
+        .country {
+            background-color: var(--color-primary-3);
+        }
+        
         .seemore {
             color: var(--color-primary-3);
             font-weight: bold;
@@ -286,7 +290,7 @@
                 <img class="logo" src="/Bweepo Logo.png">
             </div>
             <div class="fill flexrow vcenter mr5 hidescrollbar">
-                <div>Brunei Darussalam</div>
+                <div class="country">Brunei Darussalam</div>
             </div>
             <div class="flexrow center">
                 <div class="flexrow center signup">
