--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
         }
         
         .country {
-            background-color: var(--color-primary-3);
+            color: var(--color-primary-3);
         }
         
         .seemore {
@@ -290,7 +290,7 @@
                 <img class="logo" src="/Bweepo Logo.png">
             </div>
             <div class="fill flexrow vcenter mr5 hidescrollbar">
-                <div class="country">Brunei Darussalam</div>
+                <div class="country">ASEAN</div>
             </div>
             <div class="flexrow center">
                 <div class="flexrow center signup">
