--- a/index.html
+++ b/index.html
@@ -228,6 +228,7 @@
         
         .country {
             color: var(--color-primary-3);
+            font-weight: bold;
         }
         
         .seemore {
