--- a/index.html
+++ b/index.html
@@ -410,7 +410,7 @@
     </div>
 
     <div class="ptlr">
-        <form class="flexrow width1000Center whitespace hidescrollbar">
+        <form class="flexrow width1000Center whitespace button hidescrollbar">
             <input class="pm0 fill flexrow vcenter searchbox" type="text " placeholder="Bweepo Search">
             <div class="flexrow center search">Search</div>
         </form>
